[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pnet = "0.35"
pcap = "2.2"
mongodb = "3.1"
encoding_rs = "0.8"
flashlog = "0.2"

[dev-dependencies]
anyhow = "1.0"
criterion = "0.5"
struson = {version = "0.6", features = ["serde"]}


[[bench]]
name = "float_arithematics"
harness = false

[members]
["examples/app1"]
